# maven-mcp-server

./: README.md  main.py  openapi.yaml  pyproject.toml  serve.py  server.py
.well-known/: ai-plugin.json
tools/: maven.py
