[project]
name = "maven-mcp-server"
version = "0.1.0"
description = "LangChain tool for getting latest Maven versions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "packaging>=23.0",
    "fastapi-mcp>=0.3.6",
]
